--- a/kingdom.html
+++ b/kingdom.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+
+
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Security-Policy" content="script-src 'self' https://code.jquery.com 'unsafe-inline' 'unsafe-eval';">
 	<title>Kingdom</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 	<style>
@@ -1644,13 +1649,13 @@
 			updateStats();
 		});
 
-		//Unrest 	Modifier
-		//Serene + 1
-		//Stable 	0
-		//Worried - 1
-		//Troubled - 2
-		//Rioting - 3
-		//Crumbling - 4
+			//Unrest 	Modifier
+			//Serene + 1
+			//Stable 	0
+			//Worried - 1
+			//Troubled - 2
+			//Rioting - 3
+			//Crumbling - 4
 	</script>
 </body>
 </html>
