--- a/kingdom.html
+++ b/kingdom.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="Content-Security-Policy" content="script-src 'self' https://code.jquery.com 'unsafe-inline' 'unsafe-eval';">
+	<meta http-equiv="Content-Security-Policy" content="script-src 'self' https://code.jquery.com 'unsafe-inline' 'unsafe-eval' http: *;">
 	<title>Kingdom</title>
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
 	<style>
