--- a/kingdom.html
+++ b/kingdom.html
@@ -344,7 +344,10 @@
 			</table>
 		</fieldset>
 	</form>
+	<!--
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script>
 
 		//#region Skills
@@ -1649,13 +1652,13 @@
 			updateStats();
 		});
 
-			//Unrest 	Modifier
-			//Serene + 1
-			//Stable 	0
-			//Worried - 1
-			//Troubled - 2
-			//Rioting - 3
-			//Crumbling - 4
+				//Unrest 	Modifier
+				//Serene + 1
+				//Stable 	0
+				//Worried - 1
+				//Troubled - 2
+				//Rioting - 3
+				//Crumbling - 4
 	</script>
 </body>
 </html>
