--- a/kingdom.html
+++ b/kingdom.html
@@ -365,7 +365,7 @@
 		}
 
 		#policies div.policy.policy-22 .card {
-			background-image: url(https://static.wikia.nocookie.net/totalwar-ar/images/7/7f/Highwaymen.jpg/revision/latest?cb=20181229222915);
+			background-image: url(https://static.wikia.nocookie.net/totalwar-ar/images/7/7f/Highwaymen.jpg);
 			background-position: center;
 			background-size: cover;
 		}
