--- a/kingdom.html
+++ b/kingdom.html
@@ -370,6 +370,12 @@
 			background-size: cover;
 		}
 
+		#policies div.policy.policy-3 .card {
+			background-image: url(https://i.pinimg.com/236x/f7/66/c9/f766c9c7cbf928ffc5fdd3cab7ff5812.jpg);
+			background-position: center;
+			background-size: cover;
+		}
+
 		#policies div.policy.policy-4 .card {
 			background-image: url(https://i.pinimg.com/originals/da/2a/93/da2a932f9020af4557968625b86c549c.jpg);
 			background-position: center;
@@ -418,12 +424,15 @@
 					</td>
 					<td>
 						<select id="selectUnrest">
-							<option value="1">Serene (+1)</option>
-							<option value="0" selected>Stable (+0)</option>
-							<option value="-1">Worried (-1)</option>
-							<option value="-2">Troubled (-2)</option>
-							<option value="-3">Rioting (-3)</option>
-							<option value="-4">Crumbling (-4)</option>
+							<option value="0">Serene (0)</option>
+							<option value="1">Peaceful (1)</option>
+							<option value="2" selected>Calm (2)</option>
+							<option value="3">Stable (3)</option>
+							<option value="4">Worried (4)</option>
+							<option value="5">Tense (5)</option>
+							<option value="6">Troubled (6)</option>
+							<option value="7">Rioting (7)</option>
+							<option value="8">Crumbling (8)</option>
 						</select>
 					</td>
 				</tr>
