--- a/kingdom.html
+++ b/kingdom.html
@@ -346,6 +346,12 @@
 			background-size: cover;
 		}
 
+		#advisors div.advisor.advisor-2 .image {
+			background-image: url(https://img.wattpad.com/cover/165227192-288-k177665.jpg);
+			background-position: top;
+			background-size: cover;
+		}
+
 		#advisors div.advisor.advisor-3 .image {
 			background-image: url(https://i.pinimg.com/originals/39/29/c7/3929c79a5b7be03bf4c77b75e2a3d701.jpg);
 			background-position: top;
